# pi-mono-rust

./: .gitignore  .gitmodules  Cargo.toml  clippy.sh  pi  pyproject.toml  ralph  rs-test.sh  rs.sh  submodules.sh  ts-test.sh  ts.sh
.github/workflows/: ci.yml
docs/: rust-port-plan.md  update.md
src/: config.rs  lib.rs  main.rs  test_port.rs
tests/: agent_agent_loop_test.rs  agent_agent_test.rs  agent_e2e_test.rs  ai_abort_test.rs  ai_context_overflow_test.rs  ai_empty_test.rs  ai_handoff_test.rs  ai_image_limits_test.rs  ai_image_tool_result_test.rs  ai_stream_test.rs  ai_tokens_test.rs  ai_tool_call_without_result_test.rs  ai_total_tokens_test.rs  ai_unicode_surrogate_test.rs  ai_xhigh_test.rs  args.rs  coding_agent_agent_session_branching_test.rs  coding_agent_agent_session_compaction_test.rs  coding_agent_agent_session_concurrent_test.rs  coding_agent_agent_session_tree_navigation_test.rs  coding_agent_compaction_hooks_example_test.rs  coding_agent_compaction_hooks_test.rs  coding_agent_compaction_thinking_model_test.rs  coding_agent_fuzzy_test.rs  coding_agent_interactive_mode_status_test.rs  coding_agent_model_registry_test.rs  coding_agent_model_resolver_test.rs  coding_agent_prompt_templates_test.rs  coding_agent_rpc_test.rs  coding_agent_skills_test.rs  coding_agent_slash_commands_test.rs  coding_agent_tools_test.rs  coding_agent_truncate_to_width_test.rs  compaction.rs  config_test.rs  extensions_compaction_hooks_test.rs  extensions_discovery_test.rs  extensions_runner_test.rs  extensions_tool_execution_test.rs  extensions_tool_hooks_test.rs  (+20 more)
(+76 files in other folders)
