[package]
name = "pi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "pi"
path = "src/main.rs"

[features]
default = []
python = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", optional = true }
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
unicode-segmentation = "1"
unicode-width = "0.1"
glob = "0.3"
regex = "1"
base64 = "0.22"
crossterm = "0.27"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
rand = "0.9"
sha2 = "0.10"
url = "2"
hex = "0.4"
